사용자 전화번호 필드 추가 및 관련 API 수정
